[gd_scene load_steps=12 format=3 uid="uid://pa8l7wknqery"]

[ext_resource type="Script" uid="uid://c1mabujstvs65" path="res://Scenes/UI/InterrogationRoomSceneButtons/interrogation_room_scene_buttons.gd" id="1_img7l"]
[ext_resource type="Texture2D" uid="uid://bbe37i1v17vmq" path="res://Scenes/UI/InterrogationRoomSceneButtons/journal_normal.png" id="2_g57hi"]
[ext_resource type="Texture2D" uid="uid://blql43iqaksan" path="res://Scenes/UI/InterrogationRoomSceneButtons/journal_hover.png" id="3_mkl63"]
[ext_resource type="Texture2D" uid="uid://b6o7a5ik6cjju" path="res://Scenes/UI/InterrogationRoomSceneButtons/itemviewer_normal.png" id="4_psik2"]
[ext_resource type="Texture2D" uid="uid://ca7i5kj3tjef6" path="res://Scenes/UI/InterrogationRoomSceneButtons/itemviewer_hover.png" id="5_7leid"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oy2jt"]
texture = ExtResource("2_g57hi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jdhbb"]
texture = ExtResource("3_mkl63")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwr6b"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gumrm"]
texture = ExtResource("4_psik2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bwr6b"]
texture = ExtResource("5_7leid")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdhbb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="InterrogationRoomSceneButtons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_img7l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.020000001
anchor_top = 0.034
anchor_right = 0.082
anchor_bottom = 0.086
offset_left = 0.29999924
offset_top = 0.27999878
offset_right = 0.66000366
offset_bottom = 0.11999512
theme_override_constants/separation = 8

[node name="JournalButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_oy2jt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jdhbb")
theme_override_styles/hover = SubResource("StyleBoxTexture_jdhbb")
theme_override_styles/focus = SubResource("StyleBoxFlat_bwr6b")

[node name="ItemViewerButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_gumrm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bwr6b")
theme_override_styles/hover = SubResource("StyleBoxTexture_bwr6b")
theme_override_styles/focus = SubResource("StyleBoxFlat_jdhbb")

[connection signal="pressed" from="HBoxContainer/JournalButton" to="." method="_on_journal_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ItemViewerButton" to="." method="_on_item_viewer_button_pressed"]
